--- a/slide轮播图布局/轮播图布局.html
+++ b/slide轮播图布局/轮播图布局.html
@@ -47,8 +47,11 @@
         bottom: 10px;
         line-height: 16px;
         height: 16px;
-        width: 500px;
+        width: 100px;
         text-align: center;
+        background: #fff;
+        margin-left: 200px;
+        border-radius: 8px;
       }
       .slide-nav li {
         display: inline-block;
@@ -56,7 +59,7 @@
         height: 8px;
         border-radius: 4px;
         background: #cbcbcb;
-        margin-right: 6px;
+        margin: 2px;
         cursor: pointer;
       }
     </style>
@@ -64,7 +67,7 @@
   <body>
     <div class="box">
       <div class="content">
-        <img src="./img/Christmas3.png" alt="" />
+        <img src="./img/Christmas2.png" alt="" />
       </div>
       <div class="pre"></div>
       <div class="next"></div>
